It looks like Firefox only supports the word 'success'; using anything else requires no newline, which I don't think is possible without serving a text file (which I don't want to do). https://bugzilla.mozilla.org/show_bug.cgi?id=1534088

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ version: "3.7"
 services:
   test_website:
     image: nginx:alpine
+    ports:
+      - 80:80
     volumes:
       - "$PWD/site:/usr/share/nginx/html"
   test:
